# Multiple-Dimensions-Kadane-Algorithm

./: .gitignore  CMakeLists.txt  Multiple Dementions Kadane Algorithm.sln  build.bat  run.bat
Multiple Dementions Kadane Algorithm/: Multiple Dementions Kadane Algorithm.c  Multiple Dementions Kadane Algorithm.cpp  Multiple Dementions Kadane Algorithm.vcxproj  Multiple Dementions Kadane Algorithm.vcxproj.filters  add.c  add.cpp  add.h  kadane.c  kadane.cpp  kadane.h  remove.c  remove.cpp  remove.h  scan.c  scan.cpp  scan.h  subroutines.h  sumDimentions.c
code/: CMakeLists.txt  main.c
code/Subroutines/: add.c  kadane.c  remove.c  scan.c  subroutines.h  subtract.c  sumDimensions.c  sumDimentions.c
